--- a/ftf_geonode/templates/site_index.html
+++ b/ftf_geonode/templates/site_index.html
@@ -8,7 +8,7 @@ This is where you can override the hero area block. You can simply modify the co
 {% block hero %}
 <div class="jumbotron">
   <div class="container">
-    <h1>{% trans "USAID Nepal GeoNode" %}</h1>
+    <h1>{% trans "FTF GeoNode" %}</h1>
     <p>{% blocktrans %}USAID Nepal, Feed the Future, and USAID Global Development Lab are cooperating on the <a href="http://datadrivenfarming.challenges.org/">Data Driven Farming Prize.{% endblocktrans %}</p>
     <span>{% trans 'Need help?' %} <a href="./help">{% trans 'Getting Started' %}</a></span>
   </div>
