--- a/ftf_geonode/static/css/site_base.css
+++ b/ftf_geonode/static/css/site_base.css
@@ -1,6 +1,6 @@
 .navbar-brand {
     height: 72px;
-    background: url(../img/usaid_nepal_geonode_logo.png) no-repeat;
+    background: url(../img/ftf_geonode_logo.png) no-repeat;
     background-position: center;
 }
 
