--- a/ftf_geonode/static/css/site_base.css
+++ b/ftf_geonode/static/css/site_base.css
@@ -5,12 +5,15 @@
 }
 
 .home .jumbotron {
-	background: url(../img/background/jumbotron_background.jpg) no-repeat;
+  background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.2)),url('../img/background/jumbotron_background.jpg') no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding: 7.5em 0 3.75em;
 }
 
 
 #ftf_geonode_navbar {
-  background-image: url(../img/background/ftf_geonode.png);
+  background-image: url(../img/background/ftf_background.png);
   background-repeat: repeat;
   padding: 2px 0px;
 }
