--- a/ftf_geonode/templates/site_base.html
+++ b/ftf_geonode/templates/site_base.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% load i18n %}
+{% load i18n avatar_tags %}
 
 {% block extra_head %}
 <link href="https://fonts.googleapis.com/css?family=Montserrat|Noto+Sans|Source+Sans+Pro" rel="stylesheet">
@@ -15,76 +15,68 @@
     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
       <i class="fa fa-navicon fa-lg"></i>
     </button>
-    <a class="navbar-brand" href="{% url "home" %}">GeoNode</a>
+    <a class="navbar-brand" href="{% url "home" %}"><img src="{{ STATIC_URL }}/img/logo/ftf_geonode_white.png" style="max-width:100%;max-height:100%;"/></a>
   </div>
   <div id="navbar" class="navbar-collapse collapse">
     <ul class="nav navbar-nav toolbar">
       <li id="nav_layers">
         <a href="{% url "layer_browse" %}">{% trans "Datasets" %}</a>
       </li>
-      <!--<li id="nav_maps">
-        <a href="{% url "maps_browse" %}">{% trans "Maps" %}</a>
-      </li>
-      <li id="nav_documents">
-        <a href="{% url "document_browse" %}">{% trans "Documents" %}</a>
-      </li>-->
       <li id="nav_people">
         <a href="{% url "profile_browse" %}">{% trans "People" %}</a>
       </li>
       <li id="nav_groups">
         <a href="{% url "group_list" %}">{% trans "Groups" %}</a>
-      </li>-->
+      </li>
       <li id="nav_help">
         <a href="/help">Help</a>
       </li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-        <li>
-          <div class="search">
-            <form id="search" action="{% url "search" %}" >
-              <span class="fa fa-search"></span>
-              {% if HAYSTACK_SEARCH %}
-              <input id="search_input" type="text" placeholder="Search" name="q">
-              {% else %}
-              <input id="search_input" type="text" placeholder="Search" name="title__icontains">
-              {% endif %}
-            </form>
-          </div>
+      <li>
+        <div class="search">
+          <form id="search" action="{% url "search" %}" >
+            <span class="fa fa-search"></span>
+            {% if HAYSTACK_SEARCH %}
+            <input id="search_input" type="text" placeholder="Search" name="q">
+            {% else %}
+            <input id="search_input" type="text" placeholder="Search" name="title__icontains">
+            {% endif %}
+          </form>
+        </div>
       </li>
-        {% if not user.is_authenticated and REGISTRATION_OPEN %}
-        <li><a href="{% url "account_signup" %}">{% trans "Register" %}</a></li>
-        {% endif %}
-        {% if user.is_authenticated %}
-        <li><a href="#" class="dropdown-toggle avatar" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% avatar user 42 %} {{ user.username }}<i class="fa fa-angle-down fa-lg"></i></a>
-          <ul class="dropdown-menu">
-            <li><a href="{{ user.get_absolute_url }}">{% trans "Profile" %}</a></li>
-            <li><a href="{% url "recent-activity" %}">{% trans "Recent Activity" %}</a></li>
-            <li><a href="{% url "messages_inbox" %}">{% trans "Inbox" %}</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="{% url "admin:index" %}">Admin</a></li>
-            <li><a href="{{ GEOSERVER_BASE_URL }}">GeoServer</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="{% url "help" %}">{% trans "Help" %}</li>
-            <li role="separator" class="divider"></li>
-            <li><a href="/account/logout/">Logout</a></li>
-            </ul>
-          </li>
+      {% if not user.is_authenticated and REGISTRATION_OPEN %}
+      <li><a href="{% url "account_signup" %}">{% trans "Register" %}</a></li>
+      {% endif %}
+      {% if user.is_authenticated %}
+      <li><a href="#" class="dropdown-toggle avatar" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% avatar user 42 %} {{ user.username }}<i class="fa fa-angle-down fa-lg"></i></a>
+        <ul class="dropdown-menu">
+          <li><a href="{{ user.get_absolute_url }}">{% trans "Profile" %}</a></li>
+          <li><a href="{% url "recent-activity" %}">{% trans "Recent Activity" %}</a></li>
+          <li><a href="{% url "messages_inbox" %}">{% trans "Inbox" %}</a></li>
+          <li role="separator" class="divider"></li>
+          <li><a href="{% url "admin:index" %}">Admin</a></li>
+          <li><a href="{{ GEOSERVER_BASE_URL }}">GeoServer</a></li>
+          <li role="separator" class="divider"></li>
+          <li><a href="{% url "help" %}">{% trans "Help" %}</li>
+          <li role="separator" class="divider"></li>
+          <li><a href="/account/logout/">Logout</a></li>
+        </ul>
+      </li>
       {% else %}
       <li><a href="#" data-toggle="modal" data-target="#SigninModal" role="button" >{% trans "Sign in" %} </a></li>
-          {% endif %}
-        </ul>
-      </div> <!--/.nav-collapse -->
-    </div>
-  </nav>
+      {% endif %}
+      </ul>
+    </div> <!--/.nav-collapse -->
+  </div>
+</nav>
 {% endblock header %}
 
 {% block footer %}
-<footer>
+<footer id="ftf_geonode_footer">
   <div class="container">
     <div class="row">
-      <div class="col-md-6">
-        <img src="{{ STATIC_URL }}img/logo/ftf_logo_white.png" />
-      </div>
+      <div class="col-md-6"><a href="https://feedthefuture.gov/"><img src="{{ STATIC_URL }}img/logo/ftf_logo_white.png" style="max-width:100%;" /></a></div>
       <div class="col-md-1">
         <ul class="list-unstyled">
           <li>Data</li>
