--- a/ftf_geonode/templates/site_index.html
+++ b/ftf_geonode/templates/site_index.html
@@ -8,7 +8,7 @@ This is where you can override the hero area block. You can simply modify the co
 {% block hero %}
 <div class="jumbotron">
   <div class="container">
-    <h1>{% trans "FTF GeoNode" %}</h1>
+    <h1 style="font-family: 'Montserrat', sans-serif;"><span style="letter-spacing:-6px;">FTF</span><span style="margin-left: 4rem; letter-spacing: 0.2rem;">GeoNode</span></h1>
     <p>{% blocktrans %}<a href="http://datadrivenfarming.challenges.org/">The Data Driven Farming Prize</a> is seeking tools and approaches that source, analyze and translate data into actionable, timely and context-specific information for smallholder farmers to improve value from agricultural productivity.  The FTF GeoNode provides open data and APIs to support these efforts.{% endblocktrans %}</p>
     <span>{% trans 'Need help?' %} <a href="./help">{% trans 'Getting Started' %}</a></span>
   </div>
