--- a/ftf_geonode/templates/site_base.html
+++ b/ftf_geonode/templates/site_base.html
@@ -6,31 +6,30 @@
 <link href="https://fonts.googleapis.com/css?family=Montserrat|Noto+Sans|Source+Sans+Pro" rel="stylesheet">
 <link href="{{ STATIC_URL }}css/site_base.css" rel="stylesheet"/>
 <script src="{{ STATIC_URL }}js/site_base.js"></script>
+<link rel="icon" href="{{ STATIC_URL }}img/ddf/cropped-ddf-logo-3-32x32.png" sizes="32x32" />
+<link rel="icon" href="{{ STATIC_URL }}img/ddf/cropped-ddf-logo-3-192x192.png" sizes="192x192" />
+<link rel="apple-touch-icon-precomposed" href="{{ STATIC_URL }}img/ddf/cropped-ddf-logo-3-180x180.png" />
+<meta name="msapplication-TileImage" content="{{ STATIC_URL }}img/ddf/cropped-ddf-logo-3-270x270.png" />
 {% endblock %}
 
 {% block header %}
-<nav id="ftf_geonode_navbar" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<nav id="ftf_geonode_navbar" class="navbar navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
       <i class="fa fa-navicon fa-lg"></i>
     </button>
-    <a class="navbar-brand" href="{% url "home" %}"><img src="{{ STATIC_URL }}/img/logo/ftf_geonode_white.png" style="max-width:100%;max-height:100%;"/></a>
+    <!--<a class="navbar-brand" href="{% url "home" %}"><img src="{{ STATIC_URL }}/img/logo/ftf_geonode_white.png" style="max-width:100%;max-height:100%;"/></a>-->
+    <a class="navbar-brand" href="{% url "home" %}">
+      <div class="row">Data Driven</div><div class="row">Farming GeoNode</div>
+    </a>
   </div>
   <div id="navbar" class="navbar-collapse collapse">
     <ul class="nav navbar-nav toolbar">
-      <li id="nav_layers">
-        <a href="{% url "layer_browse" %}">{% trans "Datasets" %}</a>
-      </li>
-      <li id="nav_people">
-        <a href="{% url "profile_browse" %}">{% trans "People" %}</a>
-      </li>
-      <li id="nav_groups">
-        <a href="{% url "group_list" %}">{% trans "Groups" %}</a>
-      </li>
-      <li id="nav_help">
-        <a href="./help">Help</a>
-      </li>
+      <li id="nav_layers"><a href="{% url "layer_browse" %}">{% trans "Datasets" %}</a></li>
+      <li id="nav_osm"><a href="{% url "layer_browse" %}">{% trans "OSM" %}</a></li>
+      <li id="nav_apis"><a href="/apis">{% trans "APIs" %}</a></li>
+      <li id="nav_about"><a href="{% url "about" %}">About</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li>
@@ -45,7 +44,7 @@
           </form>
         </div>
       </li>
-      {% if not user.is_authenticated and REGISTRATION_OPEN %}
+      {% if REGISTRATION_OPEN and not user.is_authenticated%}
       <li><a href="{% url "account_signup" %}">{% trans "Register" %}</a></li>
       {% endif %}
       {% if user.is_authenticated %}
@@ -53,12 +52,19 @@
         <ul class="dropdown-menu">
           <li><a href="{{ user.get_absolute_url }}">{% trans "Profile" %}</a></li>
           <li><a href="{% url "recent-activity" %}">{% trans "Recent Activity" %}</a></li>
-          <li><a href="{% url "messages_inbox" %}">{% trans "Inbox" %}</a></li>
+          {% if user.is_authenticated %}
+          <li role="separator" class="divider"></li>
+          <li><a href="{% url "profile_browse" %}">{% trans "People" %}</a></li>
+          <li><a href="{% url "group_list" %}">{% trans "Groups" %}</a></li>
+          {% endif %}
+          <li role="separator" class="divider"></li>
+          <li><a href="./help">{% trans "Help" %}</li>
+          {% if user.is_superuser %}
           <li role="separator" class="divider"></li>
           <li><a href="{% url "admin:index" %}">Admin</a></li>
           <li><a href="{{ GEOSERVER_BASE_URL }}">GeoServer</a></li>
-          <li role="separator" class="divider"></li>
-          <li><a href="./help">{% trans "Help" %}</li>
+          <li><a href="{% url "account_invite_user" %}">{% trans "Invite User" %}</a></li>
+          {% endif %}
           <li role="separator" class="divider"></li>
           <li><a href="/account/logout/">Logout</a></li>
         </ul>
@@ -76,48 +82,42 @@
 <footer id="ftf_geonode_footer">
   <div class="container">
     <div class="row">
-      <div class="col-md-6"><a href="https://feedthefuture.gov/"><img src="{{ STATIC_URL }}img/logo/ftf_logo_white.png" style="max-width:100%;" /></a></div>
-      <div class="col-md-1">
+      <!--<div class="col-md-3"><a href="https://feedthefuture.gov/"><img src="{{ STATIC_URL }}img/logo/ftf_logo_white.png" style="max-width:100%;" /></a></div>-->
+      <div class="col-md-3">
         <ul class="list-unstyled">
           <li>Data</li>
-          <li><a href="{% url "layer_browse" %}">{% trans "Datasets" %}</a></li>
-          <li><a href="{% url "document_browse" %}">{% trans "APIs" %}</a></li>
+          <li><a href="{% url "layer_browse" %}">Open Data</a></li>
+          <li><a href="{% url "layer_browse" %}">OSM Extracts</a></li>
           {% if user.is_authenticated %}
-          <li><a href="{% url "layer_upload" %}">Upload Data</a></li>
+          <li><a href="{% url "layer_upload" %}">Contribute</a></li>
           {% endif %}
         </ul>
       </div>
-      <div class="col-md-2">
+      <div class="col-md-3">
+        <ul class="list-unstyled">
+          <li>Developer</li>
+          <li><a href="/apis">Open APIs</a></li>
+          <li><a href="http://geonode.org">GeoNode.org</a></li>
+        </ul>
+      </div>
+      <div class="col-md-3">
         <ul class="list-unstyled">
           <li>About</li>
-          <li><a href="{% url "profile_browse" %}">{% trans "People" %}</a></li>
-          <li><a href="{% url "group_list" %}">{% trans "Groups" %}</a></li>
-          {% if user.is_superuser %}
-          <li><a href="/admin/people/profile/add/">{% trans "Add User" %}</a></li>
-          <li><a href="{% url "account_invite_user" %}">{% trans "Invite User" %}</a></li>
-          <li><a href="{% url "group_create" %}">{% trans "Create Group" %}</a></li>
-          {% endif %}
+          <li><a href="/about/#ddf-prize">Data Driven Farming Prize</a></li>
+          <li><a href="/about/#ddf-geonode">Data Driven Farming GeoNode</a></li>
+          <li><a href="/about/#ftf">Feed the Future</a></li>
+          <li><a href="/about/#geonode">GeoNode</a></li>
         </ul>
       </div>
-      <div class="col-md-3 text-right">
+      <div class="col-md-3">
         <ul class="list-unstyled">
-          <li>{% trans "Powered by" %} <a href="http://geonode.org">{% trans "GeoNode" %}</a> <em>{% trans "version" %} {{ VERSION }}</em></li>
-          <li><a href="{% url "developer" %}">{% trans "Developers" %}</a> | <a href="{% url "about" %}">{% trans "About" %}</a><li>
-        </ul>
-        <label class="hidden">{% trans "Language" %}</label>
-        {% if csrf_token != "NOTPROVIDED" %}
-        {% get_current_language as LANGUAGE %}
-        <form class="form-inline" action="/i18n/setlang/" method="post">
-        {% csrf_token %}
-          <select class="col-md-6 pull-right" name="language" onchange="javascript:form.submit()">
-            {% for lang in LANGUAGES %}
-            <option value="{{ lang.0 }}" {% ifequal LANGUAGE_CODE lang.0 %} selected="selected"{% endifequal %}>
-              {{ lang.1 }}
-            </option>
-            {% endfor %}
-          </select>
-        </form>
-        {% endif %}
+          <li>Powered by Open Source</li>
+          <li>
+            <a href="http://geonode.org/" style="margin-top: 8px;display:block;">
+              <img src="{{ STATIC_URL }}img/logo/geonode_logo_white.png" style="max-width:60%;" />
+            </a>
+          </li>
+        </div>
       </div>
     </div>
   </div>
