--- a/ftf_geonode/templates/site_base.html
+++ b/ftf_geonode/templates/site_base.html
@@ -3,6 +3,7 @@
 {% load i18n avatar_tags %}
 
 {% block extra_head %}
+<script src="https://use.typekit.net/gyy2upl.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Montserrat|Noto+Sans|Source+Sans+Pro" rel="stylesheet">
 <link href="{{ STATIC_URL }}css/site_base.css" rel="stylesheet"/>
 <script src="{{ STATIC_URL }}js/site_base.js"></script>
