--- a/ftf_geonode/static/css/site_base.css
+++ b/ftf_geonode/static/css/site_base.css
@@ -1,3 +1,22 @@
+p {
+  font-family: "proxima-nova-soft", sans-serif;
+  font-size: 16px;
+  line-height: 26px;
+}
+
+.tk-proxima-nova-soft, h1, h2, h3, .h1, .h2, .h3 {
+  font-family: "proxima-nova-soft", sans-serif;
+  color: rgb(97, 153, 142);
+}
+
+a {
+  color: rgb(97, 153, 142) !important;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
 .navbar-brand {
     height: 72px;
     background: none;
@@ -6,6 +25,8 @@
 }
 
 .navbar-brand div {
+  font-family: "proxima-nova-soft", sans-serif !important;
+  font-weight: 600 !important;
   color: rgb(103, 155, 145) !important;
 }
 
@@ -24,18 +45,6 @@
   background: rgb(241, 241, 241)!important;
 }
 
-h1, h2, h3 {
-  color: rgb(97, 153, 142);
-}
-
-a {
-  color: rgb(97, 153, 142) !important;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
 
 #ftf_geonode_navbar {
   /*background-image: url(../img/background/ftf_background.png);*/
@@ -46,8 +55,9 @@ a:hover {
 }
 
 #ftf_geonode_navbar ul li a {
+  font-family: "proxima-nova-soft", sans-serif !important;
+  font-weight: 600 !important;
   color: rgb(80, 87, 89);
-  font-weight: 600;
   padding-top: 25px;
   padding-bottom: 25px;
 }
