--- a/ftf_geonode/templates/site_index.html
+++ b/ftf_geonode/templates/site_index.html
@@ -46,19 +46,19 @@ This is where you can override the hero area block. You can simply modify the co
         <h3>Baseline Data</h3>
         <iframe
             src="{% url "viewer" %}?main:config={{ STATIC_URL }}dashboards/baseline.yml"
-            style="width:100%; height: 300px;" frameborder=0></iframe>
+            style="width:100%; height: 300px;border: 2px solid rgb(97, 153, 142);" frameborder=0></iframe>
       </div>
       <div class="col-md-4">
         <h3>Operational Data</h3>
         <iframe
             src="{% url "viewer" %}?main:config={{ STATIC_URL }}dashboards/operational.yml"
-            style="width:100%; height: 300px;" frameborder=0></iframe>
+            style="width:100%; height: 300px;border: 2px solid rgb(97, 153, 142);" frameborder=0></iframe>
       </div>
       <div class="col-md-4">
         <h3>Thematic Data</h3>
         <iframe
             src="{% url "viewer" %}?main:config={{ STATIC_URL }}dashboards/thematic.yml"
-            style="width:100%; height: 300px;" frameborder=0></iframe>
+            style="width:100%; height: 300px;border: 2px solid rgb(97, 153, 142);" frameborder=0></iframe>
       </div>
     </div>
   </div>
