added powerlines and railway_stations

--- a/ftf_geonode/templates/viewer.html
+++ b/ftf_geonode/templates/viewer.html
@@ -11,7 +11,7 @@
     <link rel="dns-prefetch" href="//api.mapbox.com">
     <link rel="dns-prefetch" href="//openstreetmap.org">
     <link rel="dns-prefetch" href="//openstreetmap.fr">
-    <title>GeoDash Viewer</title>
+    <title>Viewer - Data Driven Farming GeoNode</title>
     <!-- Fonts / External -->
     <link
       href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic'
