--- a/ftf_geonode/templates/site_base.html
+++ b/ftf_geonode/templates/site_base.html
@@ -27,6 +27,7 @@
   </div>
   <div id="navbar" class="navbar-collapse collapse">
     <ul class="nav navbar-nav toolbar">
+      <li id="nav_viewer"><a href="{% url "viewer" %}?main:config={% url "dashboard_config_viewer" %}">{% trans "Viewer" %}</a></li>
       <li id="nav_layers"><a href="{% url "layer_browse" %}">{% trans "Datasets" %}</a></li>
       <li id="nav_osm"><a href="{% url "layer_browse" %}?keywords__slug__in=osm">{% trans "OSM Extracts" %}</a></li>
       <li id="nav_apis"><a href="/apis">{% trans "APIs" %}</a></li>
