--- a/ftf_geonode/templates/viewer.html
+++ b/ftf_geonode/templates/viewer.html
@@ -40,14 +40,15 @@
     <!-- Development -->
     <!-- <link href='build/css/geodashviewer.css' rel='stylesheet' /> -->
     <!-- Production -->
-    <link href='https://d2xfobv47glk4v.cloudfront.net/geodash-viewer/1490046348359/geodashviewer.css' rel='stylesheet' />
+    <link href='https://d2xfobv47glk4v.cloudfront.net/geodash-viewer/1490131853264/geodashviewer.css' rel='stylesheet' />
     <link href="{{ STATIC_URL }}css/site_base.css" rel="stylesheet"/>
+    <style type="text/css">body { overflow: hidden;}</style>
     <style type="text/css">[ng\:cloak],[ng-cloak],[data-ng-cloak],[x-ng-cloak],.ng-cloak,.x-ng-cloak,.ng-hide:not(.ng-hide-animate){display:none !important;}</style>
     <!-- JavaScript / Polyfill -->
     <!-- Development -->
     <!-- <script src="build/js/polyfill.min.js"></script> -->
     <!-- Production -->
-    <script src="https://d2xfobv47glk4v.cloudfront.net/geodash-viewer/1490046348359/polyfill.min.js"></script>
+    <script src="https://d2xfobv47glk4v.cloudfront.net/geodash-viewer/1490131853264/polyfill.min.js"></script>
     <!-- JavaScript / Font CDN-->
     <!--<script src="https://use.fontawesome.com/e18802c081.js"></script>-->
     <!-- JavaScript / Monolith -->
@@ -55,7 +56,7 @@
     <!-- <script src="build/js/geodashviewer.full.js"></script> -->
     <!-- Production -->
     <!-- Can't used minified version, b/c it strips out something critical, but don't know what yet -->
-    <script src="https://d2xfobv47glk4v.cloudfront.net/geodash-viewer/1490046348359/geodashviewer.full.js"></script>
+    <script src="https://d2xfobv47glk4v.cloudfront.net/geodash-viewer/1490131853264/geodashviewer.full.js"></script>
     <script type="text/javascript" language="Javascript">
       geodash.mapping_library = "ol3";
       geodash.api.addHandler("GeoDashControllerMain", "geodash:maploaded", function($scope, $interpolate, $http, $q, event, args){
