font awesome added

--- a/ftf_geonode/templates/viewer.html
+++ b/ftf_geonode/templates/viewer.html
@@ -35,7 +35,7 @@
       media="all" />
     <style>.ol-control button { width: 2em; height: 2em; }</style>
     <!-- Font Awesome CSS -->
-    <link href="lib/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+    <link href="{{ STATIC_URL }}lib/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
     <!-- CSS / Internal -->
     <!-- Development -->
     <!-- <link href='build/css/geodashviewer.css' rel='stylesheet' /> -->
