added Feed the Future

--- a/ftf_geonode/templates/about.html
+++ b/ftf_geonode/templates/about.html
@@ -18,7 +18,7 @@
   <div id="ddf-geonode" style="position:absolute; top:-80px"></div>
   <div class="col-md-8">
     <h3>Data Driven Farming GeoNode</h3>
-    <p>The Data Driven Farming GeoNode is maintained by USAID to faciliate access to key operational, thematic, and contextual datasets to accelerate innovation for the Data Driven Farming Prize.</p>
+    <p>Feed the Future's Data Driven Farming GeoNode is maintained by USAID to faciliate access to key operational, thematic, and contextual datasets to accelerate innovation for the Data Driven Farming Prize.</p>
   </div>
 </div>
 <div class="row" style="position:relative;">
