--- a/ftf_geonode/templates/site_index.html
+++ b/ftf_geonode/templates/site_index.html
@@ -9,7 +9,7 @@ This is where you can override the hero area block. You can simply modify the co
 <div class="jumbotron" style="position:relative;">
   <div class="container">
     <h2 style="font-family: 'Montserrat', sans-serif;color:white;"><span style="letter-spacing: 0.2rem;">Data Driven Farming GeoNode</span></h2>
-    <p>{% blocktrans %}<a href="http://datadrivenfarming.challenges.org/">The Data Driven Farming Prize</a> is seeking tools and approaches that source, analyze and translate data into actionable, timely and context-specific information for smallholder farmers to improve value from agricultural productivity.  This GeoNode provides open data and APIs to support these efforts.{% endblocktrans %}</p>
+    <p>{% blocktrans %}Feed the Future's <a href="http://datadrivenfarming.challenges.org/">Data Driven Farming Prize</a> is seeking tools and approaches that source, analyze and translate data into actionable, timely and context-specific information for smallholder farmers to improve value from agricultural productivity.  This GeoNode provides open data and APIs to support these efforts.{% endblocktrans %}</p>
   </div>
   <div style="position:absolute; right: 2rem; bottom: 1rem;font-size: 12px;"><span>Background Image from </span><a href="https://www.ars.usda.gov/oc/images/photos/apr01/k9388-14/" target="_blank">https://www.ars.usda.gov/oc/images/photos/apr01/k9388-14/</a></div>
 </div>
