added Feed the Future

--- a/ftf_geonode/templates/about.html
+++ b/ftf_geonode/templates/about.html
@@ -11,7 +11,7 @@
   <div id="ddf-prize" style="position:absolute; top:-80px"></div>
   <div class="col-md-8">
     <h3>Data Driven Farming Prize</h3>
-    <p>The <a href="http://datadrivenfarming.challenges.org/" target="_blank">Data Driven Farming Prize</a> is seeking tools and approaches that source, analyze and translate data into actionable, timely and context-specific information for smallholder farmers to improve value from agricultural productivity.</p>
+    <p>Feed the Future's <a href="http://datadrivenfarming.challenges.org/" target="_blank">Data Driven Farming Prize</a> is seeking tools and approaches that source, analyze and translate data into actionable, timely and context-specific information for smallholder farmers to improve value from agricultural productivity.</p>
   </div>
 </div>
 <div class="row" style="position:relative;">
