--- a/ftf_geonode/templates/site_base.html
+++ b/ftf_geonode/templates/site_base.html
@@ -5,7 +5,7 @@
 {% block extra_head %}
 <script src="https://use.typekit.net/gyy2upl.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Montserrat|Noto+Sans|Source+Sans+Pro" rel="stylesheet">
-<link href="{{ STATIC_URL }}css/site_base.css" rel="stylesheet"/>
+<link href="{{ STATIC_URL }}css/site_base.css?v={{ VERSION }}" rel="stylesheet"/>
 <script src="{{ STATIC_URL }}js/site_base.js"></script>
 <link rel="icon" href="{{ STATIC_URL }}img/ddf/cropped-ddf-logo-3-32x32.png" sizes="32x32" />
 <link rel="icon" href="{{ STATIC_URL }}img/ddf/cropped-ddf-logo-3-192x192.png" sizes="192x192" />
